@@ -54,6 +54,10 @@
 ## JVM temporary directory
 -Djava.io.tmpdir=${ES_TMPDIR}
 
+# Leverages accelerated vector hardware instructions; removing this may
+# result in less optimal vector performance
+20:--add-modules=jdk.incubator.vector
+
 ## heap dumps
 
 # generate a heap dump when an allocation from the Java heap fails; heap dumps
@@ -72,4 +76,4 @@
 @error.file@
 
 ## GC logging
--Xlog:gc*,gc+age=trace,safepoint:file=@loggc@:utctime,pid,tags:filecount=32,filesize=64m
+-Xlog:gc*,gc+age=trace,safepoint:file=@loggc@:utctime,level,pid,tags:filecount=32,filesize=64m
